--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "axios": "^0.17.1",
+    "client-oauth2": "^4.1.0",
     "express": "^4.14.1"
   },
   "repository": {
