--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "client-oauth2": "^4.1.0",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "marked": "^0.3.9"
   },
   "repository": {
     "type": "git",
