--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "client-oauth2": "^4.1.0",
-    "express": "^4.14.1",
-    "marked": "^0.3.9"
+    "express": "^4.14.1"
   },
   "repository": {
     "type": "git",
