--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "marked": "^0.3.9",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
