--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   ],
   "dependencies": {
     "axios": "^0.17.1",
-    "client-oauth2": "^4.1.0",
-    "express": "^4.14.1"
+    "base-64": "^0.1.0",
+    "express": "^4.14.1",
+    "simple-oauth2": "^1.5.0"
   },
   "repository": {
     "type": "git",
