--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.17.1",
     "base-64": "^0.1.0",
     "express": "^4.14.1",
+    "oauth": "^0.9.15",
     "simple-oauth2": "^1.5.0"
   },
   "repository": {
