--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "base-64": "^0.1.0",
+    "body-parser": "^1.18.2",
     "express": "^4.14.1",
     "oauth": "^0.9.15",
     "simple-oauth2": "^1.5.0"
