--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "marked": "^0.3.9",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
