--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "express": "^4.14.1",
+    "mongoose": "^5.0.1",
     "oauth": "^0.9.15"
   },
   "repository": {
