--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,9 +6,13 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "marked": "^0.3.9",
+    "prop-types": "^15.6.0",
     "react": "^15.4.2",
+    "react-axios": "^2.0.0",
     "react-dom": "^15.4.2",
+    "react-search-box": "0.0.6",
     "redux": "^3.7.2"
   },
   "scripts": {
