--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "classnames": "^2.2.5",
     "marked": "^0.3.9",
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-axios": "^2.0.0",
     "react-dom": "^15.4.2",
-    "react-search-box": "0.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-search-bar": "^2.2.0",
     "redux": "^3.7.2"
   },
   "scripts": {
