--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
+    "bind-decorator": "^1.0.11",
     "body-parser": "^1.18.2",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
