--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,16 +6,15 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.19.0",
     "classnames": "^2.2.5",
     "marked": "^0.3.9",
     "prop-types": "^15.6.0",
-    "react": "^15.4.2",
-    "react-axios": "^2.0.0",
-    "react-dom": "^15.4.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^4.2.2",
-    "react-search-bar": "^2.2.0",
-    "redux": "^3.7.2"
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
