--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.5",
     "marked": "^0.3.9",
+    "primeicons": "^2.0.0",
+    "primereact": "^3.3.2",
     "prop-types": "^15.6.0",
     "react": "^16.8.3",
     "react-dom": "^16.10.2",
