--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "base-64": "^0.1.0",
     "bind-decorator": "^1.0.11",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
     "oauth": "^0.9.15"
