--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.5",
     "marked": "^0.3.9",
+    "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
     "primereact": "^3.3.2",
     "prop-types": "^15.6.0",
@@ -16,6 +17,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4"
   },
   "scripts": {
