--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "heroku-cra-node",
+  "name": "twitsearch",
   "version": "1.0.0",
-  "description": "How to use create-react-app with a custom Node API on Heroku",
+  "description": "",
   "engines": {
     "node": "6.11.x"
   },
+  "main": "./server/build",
   "scripts": {
-    "start": "node server",
-    "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "test": "echo \"No tests\" && exit 1"
   },
   "cacheDirectories": [
     "node_modules",
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "@types/node": "^12.12.14",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
     "bind-decorator": "^1.0.11",
@@ -34,5 +39,8 @@
     "react"
   ],
   "license": "MIT",
-  "devDependencies": {}
+  "devDependencies": {
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
+  }
 }
