--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
-    "@types/node": "^12.12.14",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
     "bind-decorator": "^1.0.11",
@@ -26,7 +25,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
-    "oauth": "^0.9.15"
+    "oauth": "^0.9.15",
+    "path": "^0.12.7"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^12.12.15",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3"
   }
