--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/oauth": "^0.9.1",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
     "bind-decorator": "^1.0.11",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
