--- a/react-ui/Dockerfile
+++ b/react-ui/Dockerfile
@@ -2,10 +2,10 @@ FROM node:12
 
 WORKDIR /usr/bin/twitsearch/ui
 COPY package*.json ./
-RUN npm install
+RUN npm install --silent
 
 COPY . .
 
-EXPOSE 5000
+EXPOSE 3000
 
 CMD ["npm","start"]
