--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^4.3.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "simple-react-validator": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
