--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "4.0.1"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.5",
-    "marked": "^0.3.18",
+    "marked": "^1.2.5",
     "primeflex": "^2.0.0",
     "primeicons": "^2.0.0",
     "primereact": "^3.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^4.3.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "simple-react-validator": "^1.6.0"
   },
   "scripts": {
@@ -27,5 +27,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
