mongoose error handling

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "@types/cors": "^2.8.8",
+    "@types/mongoose": "^5.10.1",
     "@types/oauth": "^0.9.1",
     "axios": "^0.21.0",
     "base-64": "^1.0.0",
