--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "./server/build",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint . --ext .ts",
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
@@ -45,7 +45,9 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
-    "tslint": "^6.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
     "typescript": "^4.1.2"
   }
 }
