--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "@types/base-64": "^0.1.3",
+    "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
     "@types/mongoose": "^5.10.1",
     "@types/oauth": "^0.9.1",
