Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,5 +32,5 @@ steps:
 - task: Npm@1
   inputs:
     command: 'custom'
-    workingDir: 'reac-ui'
+    workingDir: 'react-ui'
     customCommand: 'run build'
