--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "4.0.1"
   },
   "dependencies": {
+    "@types/mongoose": "^5.10.2",
     "axios": "^0.19.0",
     "classnames": "^2.2.5",
     "marked": "^1.2.5",
@@ -17,7 +18,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.3.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "simple-react-validator": "^1.6.0"
   },
