--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@types/mongoose": "^5.10.2",
     "@types/oauth": "^0.9.1",
     "axios": "^0.21.0",
-    "base-64": "^1.0.0",
     "bind-decorator": "^1.0.11",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.5",
     "oauth": "^0.9.15",
