--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "4.0.1"
+    "react-scripts": "^4.0.3"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "marked": "^1.2.7",
+    "marked": "^2.0.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primereact": "^5.0.2",
+    "primereact": "^6.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
