--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.22.0",
     "react-scripts": "^4.0.3"
   },
   "dependencies": {
