--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
-    "simple-react-validator": "^1.6.0"
+    "simple-react-validator": "^1.6.0",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
